Fix spacing at bottom of ChangelogModal

--- a/components/ChangelogModal/index.scss
+++ b/components/ChangelogModal/index.scss
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     gap: $unit-4x;
+    margin-bottom: $unit-4x;
   }
 
   .version {
